--- a/nonOOP/index.css
+++ b/nonOOP/index.css
@@ -91,3 +91,12 @@
     height: 25px;
     margin: 0 auto;
 }
+
+.upNext {
+    text-align: center;
+    border: 2px solid red;
+    background-color: white;
+    width: 400px;
+    height: 25px;
+    margin: 0 auto;
+}
